# FlashOptim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashoptim_distill_det.yaml  flashoptim_nas_search.yaml  flashoptim_prune_unstructured.yaml  flashoptim_quantize_int8.yaml
docker/: Dockerfile  docker-compose.yml
docs/: Distillation.md  FAQ.md  Home.md  Installation.md  NAS.md  Pruning.md  Quantization.md  Quick-Start.md
examples/: benchmark_optimized.py  distill_model.py  prune_model.py  quantize_model.py  run_nas.py
flashoptim/: __init__.py  cli.py  registry.py
flashoptim/analytics/: __init__.py  benchmark.py  plots.py  profiler.py
flashoptim/cfg/: __init__.py  config.py
flashoptim/compilation/: __init__.py  torch_compile.py
flashoptim/distillation/: __init__.py  feature_distill.py  knowledge_distill.py  self_distill.py
flashoptim/engine/: __init__.py  callbacks.py  exporter.py  predictor.py  trainer.py  validator.py
flashoptim/losses/: __init__.py  distillation_loss.py  regularization_loss.py
flashoptim/models/: __init__.py  lora.py  optimized_model.py
flashoptim/models/backbone/: __init__.py  compressed.py
flashoptim/models/head/: __init__.py  lightweight_head.py
flashoptim/models/neck/: __init__.py  efficient_neck.py
flashoptim/nas/: __init__.py  evaluator.py  search_space.py  searcher.py
flashoptim/nn/: __init__.py
flashoptim/pruning/: __init__.py  importance.py  lottery_ticket.py  nm_sparsity.py  sparsegpt.py  structured.py  unstructured.py  wanda.py
flashoptim/quantization/: __init__.py  awq.py  calibrator.py  gptq.py  observers.py  ptq.py  qat.py  smoothquant.py
flashoptim/solutions/: __init__.py  auto_optimizer.py  deployment_profiler.py
flashoptim/utils/: __init__.py  checkpoint.py  logger.py  metrics.py  model_utils.py
tests/: test_advanced_pruning.py  test_advanced_quantization.py  test_compilation.py  test_comprehensive.py  test_pruning.py  test_quantization.py  test_registry.py
