[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashoptim"
version = "1.1.0"
description = "FlashOptim: Model optimization toolkit — quantization, pruning, distillation, and NAS for FlashVision models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FlashVision"},
]
keywords = ["model-optimization", "quantization", "pruning", "distillation", "neural-architecture-search", "pytorch", "edge-ai", "onnx", "compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
export = ["onnx>=1.14.0", "onnxruntime>=1.15.0", "onnxsim>=0.4.0"]
analytics = ["matplotlib>=3.7.0", "pandas>=2.0.0"]
all = ["onnx>=1.14.0", "onnxruntime>=1.15.0", "onnxsim>=0.4.0", "matplotlib>=3.7.0", "pandas>=2.0.0", "tqdm>=4.65.0"]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "pre-commit>=3.0.0"]

[project.urls]
Homepage = "https://github.com/FlashVision/FlashOptim"
Repository = "https://github.com/FlashVision/FlashOptim"
Issues = "https://github.com/FlashVision/FlashOptim/issues"

[project.scripts]
flashoptim = "flashoptim.cli:main"

[tool.setuptools.packages.find]
include = ["flashoptim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
